# llm_backend

./: Cargo.toml  README.md  data.json  dont_care_1.txt  dont_care_2.txt  filter_mitigations.json  mitigations.json  old_prompts.txt  prompt.json  pyproject.toml  report_template.json  results.txt  techniques.json  text.txt  upload_mitre_data.sh
data/: mitigations.json  techniques.json
src/: actor.rs  chat.rs  dto.rs  error.rs  logging.rs  main.rs  models.rs  rapport.rs  responders.rs  services.rs  state.rs  structured.rs
src/endpoints/chat/: completions.rs  mod.rs
src/endpoints/embeddings/: mod.rs  post.rs
