[package]
name = "llm_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", default-features = false, features = ["macros"] }
env_logger = "0.11.5"
kalosm = { git = "https://github.com/floneum/floneum", version = "0.3.2", features = ["language", "cuda"] }
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
serde_json = "1.0.132"
tokio-stream = { version = "0.1.16", default-features = false }
