[package]
name = "llm_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.9.0", default-features = false, features = ["macros"] }
actix-web-lab = "0.23.0"
anyhow = "1.0.93"
kalosm = { git = "https://github.com/floneum/floneum", version = "0.3.2", features = ["language" , "metal"] }
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
serde_json = "1.0.133"
thiserror = { version = "2.0.3", default-features = false, features = ["std"] }
tokio-stream = { version = "0.1.16", default-features = false }
tracing = { version = "0.1.40", default-features = false, features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-core = { version = "0.1.32", features = ["std"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "fmt"] }
ulid = { version = "1.1.3", features = ["serde"] }
async-stream = "0.3.6"
futures = "0.3.31"
